--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,20 +12,29 @@
         theme: {
           extend: {
             colors: {
-              "brand-blue": "#003366",
-              "brand-green": "#008080",
-              "brand-accent": "#FFD700",
-              "status-green": "#22c55e",
-              "status-yellow": "#f59e0b",
-              "status-red": "#ef4444",
-            },
-          },
-        },
-      };
+              'brand-blue': '#003366',
+              'brand-green': '#008080',
+              'brand-accent': '#FFD700',
+              'status-green': '#22c55e',
+              'status-yellow': '#f59e0b',
+              'status-red': '#ef4444',
+            }
+          }
+        }
+      }
     </script>
-  </head>
+  <script type="importmap">
+{
+  "imports": {
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/"
+  }
+}
+</script>
+</head>
   <body class="bg-gray-100">
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
